--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Oakland Zoo</title>
+  <title>Oakland Zoo | Home</title>
 
   <!-- import the webpage's stylesheet -->
   <link rel="stylesheet" type="text/css" href="styles.css">
@@ -23,6 +23,59 @@
       <h1>Welcome to the Oakland Zoo!</h1>
     </center>
   </header>
+
+
+  <div class="container">
+    <div class="box">
+
+      <div class="img-box" title="Animals"><img src="images/animals.jpg" alt=""></div>
+
+      <div class="content">
+        <h2>Animals</h2>
+        <p>The Oakland Zoo is home to more than 850 native and exotic animals. Learn more about about our birds, mammals, reptiles, amphibians, and arthropods on your next visit!</p>
+        <a href="animals.html"><button class="ghost-btn">read more...</button></a>
+
+      </div>
+
+    </div>
+
+    <div class="box">
+
+      <div class="img-box" title="Attractions"><img src="images/attractions.png" alt=""></div>
+
+      <div class="content">
+        <h2>Attractions</h2>
+        <p>Finished visiting your favorite animals and want some more fun? Check out some of our attractions for some more thrills to continue your adventure!</p>
+        <a href="attractions.html"><button class="ghost-btn">read more...</button></a>
+      </div>
+
+    </div>
+
+    <div class="box">
+
+      <div class="img-box" title="Food"><img src="images/food.jpg" alt=""></div>
+
+      <div class="content">
+        <h2>Food</h2>
+        <p>Keep your body filled with energy to keep your day going at the zoo with some of our famous eateries!</p>
+        <a href="food.html"><button class="ghost-btn">read more...</button></a>
+      </div>
+
+    </div>
+
+    <div class="box">
+
+      <div class="img-box" title="Shopping"><img src="images/shops.jpg" alt=""></div>
+
+      <div class="content">
+        <h2>Shopping</h2>
+        <p>Remember this day with some souvenirs.</p>
+        <a href="shop.html"><button class="ghost-btn">read more...</button></a>
+      </div>
+
+    </div>
+
+  </div>
 
 </body>
 
