--- a/index.html
+++ b/index.html
@@ -13,17 +13,54 @@
 
 
   <!-- import the webpage's javascript file -->
+  <script src="js/script.js"></script>
 </head>
 
 
 <body>
 
-  <header>
-    <center>
-      <h1>Welcome to the Oakland Zoo!</h1>
-    </center>
-  </header>
+  <section class="showcase">
+    <header>
+      <h2 class="logo">Oakland Zoo</h2>
+      <div class="toggle"></div>
+    </header>
+    <video src="videos/Oakland Zoo.mp4" autoplay="" muted="" loop=""></video>
+    <div class="overlay"></div>
+    <div class="text">
+      <h2>Get Out & Play </h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
+      <a href="#">Explore</a>
+    </div>
+    <ul class="social">
+      <li><a href="https://www.facebook.com/OakZoo/"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+      <li><a href="https://twitter.com/oakzoo?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
+      <li><a href="https://www.instagram.com/oaklandzoo/?hl=en"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+    </ul>
+  </section>
+  <div class="menu">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="animals.html">Animals</a></li>
+      <li><a href="attractions.html">Attractions</a></li>
+      <li><a href="food.html">Food</a></li>
+      <li><a href="shopping.html">Shopping</a></li>
+    </ul>
+  </div>
 
+  <script type="text/javascript">
+    const menuToggle = document.querySelector('.toggle');
+    const showcase = document.querySelector('.showcase');
+
+    menuToggle.addEventListener('click', () => {
+      menuToggle.classList.toggle('active');
+      showcase.classList.toggle('active');
+    })
+  </script>
+
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
   <div class="container">
     <div class="box">
