--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="content">
         <h2>Animals</h2>
         <p>The Oakland Zoo is home to more than 850 native and exotic animals. Learn more about about our birds, mammals, reptiles, amphibians, and arthropods on your next visit!</p>
-        <a href="animals.html"><button class="ghost-btn">read more...</button></a>
+        <a href="animals.html"><button class="ghost-btn">learn more...</button></a>
 
       </div>
 
@@ -83,7 +83,7 @@
       <div class="content">
         <h2>Attractions</h2>
         <p>Finished visiting your favorite animals and want some more fun? Check out some of our attractions for some more thrills to continue your adventure!</p>
-        <a href="attractions.html"><button class="ghost-btn">read more...</button></a>
+        <a href="attractions.html"><button class="ghost-btn">learn more...</button></a>
       </div>
 
     </div>
@@ -95,7 +95,7 @@
       <div class="content">
         <h2>Food</h2>
         <p>Keep your body filled with energy to keep your day going at the zoo with some of our famous eateries!</p>
-        <a href="food.html"><button class="ghost-btn">read more...</button></a>
+        <a href="food.html"><button class="ghost-btn">learn more...</button></a>
       </div>
 
     </div>
@@ -107,7 +107,7 @@
       <div class="content">
         <h2>Shopping</h2>
         <p>Remember this day with some souvenirs.</p>
-        <a href="shop.html"><button class="ghost-btn">read more...</button></a>
+        <a href="shop.html"><button class="ghost-btn">learn more...</button></a>
       </div>
 
     </div>
