--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
     <div class="overlay"></div>
     <div class="text">
       <h2>Get Out & Play </h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.</p>
-      <a href="#">Explore</a>
+      <p>Welcome to the Oakland Zoo! Explore our one of the best zoos in the Bay Area. The Zoo that not only has animals, but also attractions with spectacular views of the bay! </p>
+      <a href="#container">Explore</a>
     </div>
     <ul class="social">
       <li><a href="https://www.facebook.com/OakZoo/"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
@@ -61,8 +58,7 @@
   </script>
 
 
-
-  <div class="container">
+  <div class="container" id="container">
     <div class="box">
 
       <div class="img-box" title="Animals"><img src="images/animals.jpg" alt=""></div>
@@ -113,6 +109,8 @@
     </div>
 
   </div>
+
+
 </body>
 
 </html>
