--- a/animals.html
+++ b/animals.html
@@ -18,29 +18,111 @@
 
 <body>
   <section>
-    <img src="images/animal01.jpg" id="bg" />
+    <img src="images/animals.jpg" id="bg" />
     <center>
       <h2 id="text">Animals</h2>
     </center>
   </section>
 
   <div class="container">
+
     <div class="box">
-        <div class="imagBox">
-          <img src="images/animals.jpg" />
+      <div class="imgBox">
+        <img src="images/elephant.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>African Elephant</h2>
+          <p> Elephants are the heaviest land animal and the second tallest land animal on earth. An elephant's skin is grayish-brown and may be up to one inch thick in some places on the body. The trunk has two prehensile tips. Elephants walk on their tiptoes, called digitigrade, with thick fibrous pads on their toes to cushion the bones.</p>
         </div>
+      </div>
     </div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/frog.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Amazon Milk Tree Frog</h2>
+          <p> These frogs are light grayish in color with brown or black banding. Juveniles show stronger contrast which fades somewhat with maturity. Skin also becomes somewhat bumpy as they age.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/alligator.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>American Alligator</h2>
+          <p> American alligators are the largest reptile in North America. Broadly rounded snout distinguishes it from crocodiles. The fourth tooth on each side of its lower jaw is hidden when mouth is closed. Young are black with yellowish cross-bars. Mature alligators are coal black when wet, dark gray when dry.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/spider.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Black Widow Spider</h2>
+          <p>Black Widow spiders are known for their potent venom, which is 15 times as potent as rattlesnake venom.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/condor.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>California Condor</h2>
+          <p> They are notoriously massive birds, and have the longest wingspan of any bird of continental North America. They are predominantly black, with mostly bald heads. Their baggy, wrinkled skin is grey in the juvenile form, and varies from cream to reddish orange in adults. Long, white triangular stripes on the undersides of their wings distinguish them from other raptors in flight, e.g. Bald Eagles and Turley Vultures. The stripes appear mottled grey on juveniles.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/zebra.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Grant's Zebra</h2>
+          <p> Black base color with contrasting white stripes continuing all the way down to its hooves, with a short, upright mane.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/snake.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Pacific Gopher Snake</h2>
+          <p>Gopher Snakes have keeled scales ranging in color from light tan to deep yellow and light browns with patterns of darker scales scattered in between. Reaching an average of 5 feet long, their body is relatively slender from tip to snout with a narrow face.</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/poision frog.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Poison Dart Frog</h2>
+          <p> Smooth skinned, slender frog. Horizontal pupils in black eyes. Fingers and toes are unwebbed. Mainly terrestrial, but still they have small discs on fingers and toes to climb through vegetation.</p>
+        </div>
+      </div>
+    </div>
   </div>
-
-
 
 </body>
 
