--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <body>
 
+<div class="body-content">
+
   <section class="showcase">
     <header>
       <h2 class="logo">Oakland Zoo</h2>
@@ -89,7 +91,7 @@
       <div class="img-box" title="Food"><img src="images/food.jpg" alt=""></div>
 
       <div class="content">
-        <h2>Food</h2>
+        <h2>Dining</h2>
         <p>Keep your body filled with energy to keep your day going at the zoo with some of our famous eateries!</p>
         <a href="food.html"><button class="ghost-btn">learn more...</button></a>
       </div>
@@ -98,18 +100,18 @@
 
     <div class="box">
 
-      <div class="img-box" title="Shopping"><img src="images/shops.jpg" alt=""></div>
+      <div class="img-box" title="Live Cams"><img src="images/live.png" alt=""></div>
 
       <div class="content">
-        <h2>Shopping</h2>
-        <p>Remember this day with some souvenirs.</p>
-        <a href="shop.html"><button class="ghost-btn">learn more...</button></a>
+        <h2>Live Cams</h2>
+        <p>Check out how some of your favorite animals are doing with our live cams!</p>
+        <a href="live.html"><button class="ghost-btn">learn more...</button></a>
       </div>
 
     </div>
 
   </div>
-
+</div>
 
 </body>
 
