--- a/animals.html
+++ b/animals.html
@@ -33,7 +33,8 @@
       <div class="details">
         <div class="content">
           <h2>African Elephant</h2>
-          <p> Elephants are the heaviest land animal and the second tallest land animal on earth. An elephant's skin is grayish-brown and may be up to one inch thick in some places on the body. The trunk has two prehensile tips. Elephants walk on their tiptoes, called digitigrade, with thick fibrous pads on their toes to cushion the bones.</p>
+          <p> Elephants are the heaviest land animal and the second tallest land animal on earth. An elephant's skin is grayish-brown and may be up to one inch thick in some places on the body. The trunk has two prehensile tips. Elephants walk on
+            their tiptoes, called digitigrade, with thick fibrous pads on their toes to cushion the bones.</p>
         </div>
       </div>
     </div>
@@ -57,7 +58,8 @@
       <div class="details">
         <div class="content">
           <h2>American Alligator</h2>
-          <p> American alligators are the largest reptile in North America. Broadly rounded snout distinguishes it from crocodiles. The fourth tooth on each side of its lower jaw is hidden when mouth is closed. Young are black with yellowish cross-bars. Mature alligators are coal black when wet, dark gray when dry.</p>
+          <p> American alligators are the largest reptile in North America. Broadly rounded snout distinguishes it from crocodiles. The fourth tooth on each side of its lower jaw is hidden when mouth is closed. Young are black with yellowish
+            cross-bars. Mature alligators are coal black when wet, dark gray when dry.</p>
         </div>
       </div>
     </div>
@@ -81,7 +83,8 @@
       <div class="details">
         <div class="content">
           <h2>California Condor</h2>
-          <p> They are notoriously massive birds, and have the longest wingspan of any bird of continental North America. They are predominantly black, with mostly bald heads. Their baggy, wrinkled skin is grey in the juvenile form, and varies from cream to reddish orange in adults. Long, white triangular stripes on the undersides of their wings distinguish them from other raptors in flight, e.g. Bald Eagles and Turley Vultures. The stripes appear mottled grey on juveniles.</p>
+          <p> They are notoriously massive birds, and have the longest wingspan of any bird of continental North America. They are predominantly black, with mostly bald heads. Their baggy, wrinkled skin is grey in the juvenile form, and varies from
+            cream to reddish orange in adults. Long, white triangular stripes on the undersides of their wings distinguish them from other raptors in flight, e.g. Bald Eagles and Turley Vultures. The stripes appear mottled grey on juveniles.</p>
         </div>
       </div>
     </div>
@@ -105,7 +108,8 @@
       <div class="details">
         <div class="content">
           <h2>Pacific Gopher Snake</h2>
-          <p>Gopher Snakes have keeled scales ranging in color from light tan to deep yellow and light browns with patterns of darker scales scattered in between. Reaching an average of 5 feet long, their body is relatively slender from tip to snout with a narrow face.</p>
+          <p>Gopher Snakes have keeled scales ranging in color from light tan to deep yellow and light browns with patterns of darker scales scattered in between. Reaching an average of 5 feet long, their body is relatively slender from tip to snout
+            with a narrow face.</p>
         </div>
       </div>
     </div>
@@ -123,6 +127,16 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <center>
+      <a href="index.html" class="effect">Home</a> |
+      <a href="animals.html" class="effect">Animals</a> |
+      <a href="attractions.html" class="effect">Attractions</a> |
+      <a href="food.html" class="effect">Dining</a> |
+      <a href="live.html" class="effect">Live Cams</a>
+    </center>
+  </footer>
 
 </body>
 
