--- a/attractions.html
+++ b/attractions.html
@@ -19,10 +19,99 @@
 <body>
   <section>
     <img src="images/attractions2.jpeg" id="bg" />
-      <center>
-        <h2 id="text">Attractions</h2>
-      </center>
+    <center>
+      <h2 id="text">Attractions</h2>
+    </center>
   </section>
 
-  </body>
-  </html>
+  <div class="container">
+
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/carousel.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Connservation Carousel</h2>
+          <p>Do you want to ride the tiger? The ostrich? Or maybe the elephant? Enjoy a leisurely ride with some amazing animals on the Conservation Carousel.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/gondola.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Gondola</h2>
+          <p>Our ADA-accessible, all-electric, eight-passenger gondolas transport guests on a four-minute ride, from the main Zoo, up and over the rolling hills of Knowland Park to California Trail. There, at 650 feet above sea-level, the gondolas
+            arrive at the 3-story Kaiser Permanente Visitor Center, which houses The Landing Café.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/wild australia.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Wild Australia</h2>
+          <p>Go 'Down Under' on the Outback Express Train. Just sit back, relax, and enjoy a tour of Wild Australia, featuring emus and wallaroos.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/retro.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Retro Racing</h2>
+          <p> Do you like race cars? Well, what are you waiting for? Retro is in style with these race cars where kids get to sit in the driver's seat.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/safari2.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Serengeti Safari</h2>
+          <p> Climb aboard! This family friendly jeep adventure ride accommodates up to four passengers, traversing a track through the Serengeti.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBox">
+        <img src="images/zebra.jpg" />
+      </div>
+      <div class="details">
+        <div class="content">
+          <h2>Tiger Trek</h2>
+          <p>This ride will thrill kids and adults alike. Loads of twists, turns, and all around fun; this kiddie coaster will give you a roaring good time. Hang onto your tail!</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <footer>
+    <center>
+      <a href="index.html" class="effect">Home</a> |
+      <a href="animals.html" class="effect">Animals</a> |
+      <a href="attractions.html" class="effect">Attractions</a> |
+      <a href="food.html" class="effect">Dining</a> |
+      <a href="live.html" class="effect">Live Cams</a>
+    </center>
+  </footer>
+
+</body>
+
+</html>
