--- a/food.html
+++ b/food.html
@@ -85,7 +85,18 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
+
+  <footer>
+    <center>
+      <a href="index.html" class="effect">Home</a> |
+      <a href="animals.html" class="effect">Animals</a> |
+      <a href="attractions.html" class="effect">Attractions</a> |
+      <a href="food.html" class="effect">Dining</a> |
+      <a href="live.html" class="effect">Live Cams</a>
+    </center>
+  </footer>
 
 </body>
+
 </html>
