--- a/live.html
+++ b/live.html
@@ -33,8 +33,9 @@
       <div class="details">
         <div class="content">
           <h2>Grizzly Bear Cams</h2>
-          <p>Oakland Zoo is home to two sets of brothers. The bears are given a wide variety of enrichment, as well as choice. Our Animal Care team manages the bears as naturally as possible, mimicking their natural surroundings and their seasonal diets. During the winter months, the bears go into torpor, a period of lower activity and metabolic rates. Bears are not true hibernators. At this time of the year, the animal care team prepares areas for dens and places to rest.</p>
-          <a href="https://www.oaklandzoo.org/grizzly-bear-cams"> <button> Click Here</button></a>
+          <p>Oakland Zoo is home to two sets of brothers. The bears are given a wide variety of enrichment, as well as choice. Our Animal Care team manages the bears as naturally as possible, mimicking their natural surroundings and their seasonal
+            diets. During the winter months, the bears go into torpor, a period of lower activity and metabolic rates. Bears are not true hibernators. At this time of the year, the animal care team prepares areas for dens and places to rest.</p>
+          <a href="https://www.oaklandzoo.org/grizzly-bear-cams"> <button>Watch Live</button></a>
         </div>
       </div>
     </div>
@@ -46,8 +47,9 @@
       <div class="details">
         <div class="content">
           <h2>Elephant Cams</h2>
-          <p>Watch the African Elephants at Oakland Zoo live! This elephant habitat includes 6.5 acres of grassy hills, trees, a swimming pond, and mud wallow. Like elephants in the wild, our elephants spend most of their time grazing, browsing on tree branches and foraging. Did you know elephants eat 200-300 pounds of food a day?</p>
-            <a href="https://www.oaklandzoo.org/elephant-cams"> <button> Click Here</button></a>
+          <p>Watch the African Elephants at Oakland Zoo live! This elephant habitat includes 6.5 acres of grassy hills, trees, a swimming pond, and mud wallow. Like elephants in the wild, our elephants spend most of their time grazing, browsing on
+            tree branches and foraging. Did you know elephants eat 200-300 pounds of food a day?</p>
+          <a href="https://www.oaklandzoo.org/elephant-cams"> <button>Watch Live</button></a>
         </div>
       </div>
     </div>
@@ -59,8 +61,10 @@
       <div class="details">
         <div class="content">
           <h2>Sun Bear Cams</h2>
-          <p>While little is known about how many Sun Bears are left in the wild, Oakland Zoo is home to three of these amazing, unique species of bears. They are called sun bears because of the sun-like mark on their chests. Their long claws and especially long tongues are important tools for getting food, sometimes high up in the trees. You might see one of our bears climbing up the large eucalyptus tree in their exhibit. These bears love to eat avocados, honey, and peanut butter as treats.</p>
-            <a href="https://www.oaklandzoo.org/sun-bear-cams"> <button> Click Here</button></a>
+          <p>While little is known about how many Sun Bears are left in the wild, Oakland Zoo is home to three of these amazing, unique species of bears. They are called sun bears because of the sun-like mark on their chests. Their long claws and
+            especially long tongues are important tools for getting food, sometimes high up in the trees. You might see one of our bears climbing up the large eucalyptus tree in their exhibit. These bears love to eat avocados, honey, and peanut
+            butter as treats.</p>
+          <a href="https://www.oaklandzoo.org/sun-bear-cams"> <button> Watch Live</button></a>
         </div>
       </div>
     </div>
@@ -72,13 +76,24 @@
       <div class="details">
         <div class="content">
           <h2>Black Bear Cams</h2>
-          <p>Black bears are North America’s most common and familiar bear, and Oakland Zoo is proudly home to three – a mother and two cubs.  Don’t let the name fool you, American Black Bears can come in different shades from black, brown, cinnamon, and even blonde!</p>
-            <a href="https://www.oaklandzoo.org/black-bear-cams"> <button> Click Here</button></a>
+          <p>Black bears are North America’s most common and familiar bear, and Oakland Zoo is proudly home to three – a mother and two cubs. Don’t let the name fool you, American Black Bears can come in different shades from black, brown, cinnamon,
+            and even blonde!</p>
+          <a href="https://www.oaklandzoo.org/black-bear-cams"> <button>Watch Live</button></a>
         </div>
       </div>
     </div>
 
   </div>
+
+  <footer>
+    <center>
+      <a href="index.html" class="effect">Home</a> |
+      <a href="animals.html" class="effect">Animals</a> |
+      <a href="attractions.html" class="effect">Attractions</a> |
+      <a href="food.html" class="effect">Dining</a> |
+      <a href="live.html" class="effect">Live Cams</a>
+    </center>
+  </footer>
 
 </body>
 
