--- a/attractions.html
+++ b/attractions.html
@@ -90,7 +90,7 @@
 
     <div class="box">
       <div class="imgBox">
-        <img src="images/zebra.jpg" />
+        <img src="images/tiger trek.jpg" />
       </div>
       <div class="details">
         <div class="content">
