--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="animals.html">Animals</a></li>
         <li><a href="attractions.html">Attractions</a></li>
         <li><a href="food.html">Food</a></li>
-        <li><a href="shopping.html">Shopping</a></li>
+        <li><a href="live.html">Live Cams</a></li>
       </ul>
     </div>
 
